kubernetes/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-web
spec:
  gatewayClassName: acme-lb
  listeners:
    - protocol: HTTP
      port: 80
      name: prod-web-gw
      allowedRoutes:
        namespaces:
          from: Same
