kubernetes/gateway/http_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foo
spec:
  parentRefs:
    - name:
  rules:
    - backendRefs:
        - name: yatodo
          port: 8081
